[gd_scene load_steps=9 format=3 uid="uid://umk4alkghyk0"]

[ext_resource type="Script" uid="uid://bc0ge6y6ehnq3" path="res://scenes/ui/setting.gd" id="1_gcxgo"]
[ext_resource type="Texture2D" uid="uid://bm66ag0j7y3qi" path="res://assets/ui/panels/popup.png" id="2_hbhqd"]
[ext_resource type="FontFile" uid="uid://bf742t4mxgd7l" path="res://assets/fonts/big_font.fnt" id="3_d3hd3"]
[ext_resource type="Texture2D" uid="uid://cf5bryhe8pjyb" path="res://assets/ui/buttons/on_button.png" id="4_aw1yb"]
[ext_resource type="Texture2D" uid="uid://bvxx77qm55k1l" path="res://assets/ui/buttons/off_button.png" id="5_cnla0"]
[ext_resource type="Texture2D" uid="uid://1ixikr4bmj5y" path="res://assets/ui/buttons/Quit.png" id="6_f0m44"]
[ext_resource type="Texture2D" uid="uid://brougscrg6lf5" path="res://assets/ui/buttons/Resume.png" id="7_k5hx8"]
[ext_resource type="Texture2D" uid="uid://ds6trjvfrgte" path="res://assets/ui/buttons/Retry.png" id="8_kf6ce"]

[node name="Setting2" type="CanvasLayer"]
layer = 100
script = ExtResource("1_gcxgo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 553.0
offset_bottom = 313.0
color = Color(0, 0.435294, 1, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect"]
layout_mode = 0
offset_left = 214.0
offset_top = 90.0
offset_right = 355.0
offset_bottom = 188.0
texture = ExtResource("2_hbhqd")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Sound" type="Label" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = -13.0
offset_top = 30.0
offset_right = 125.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("3_d3hd3")
theme_override_font_sizes/font_size = 16
text = "SOUND"
horizontal_alignment = 1

[node name="Sfx" type="Label" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 17.0
offset_top = 49.0
offset_right = 97.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("3_d3hd3")
theme_override_font_sizes/font_size = 16
text = "SFX"
horizontal_alignment = 1

[node name="SoundCheckButton" type="CheckButton" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 101.0
offset_top = 27.0
offset_right = 125.0
offset_bottom = 48.0
theme_override_icons/checked = ExtResource("4_aw1yb")
theme_override_icons/unchecked = ExtResource("5_cnla0")
action_mode = 0

[node name="SFXCheckButton" type="CheckButton" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 101.0
offset_top = 45.0
offset_right = 125.0
offset_bottom = 66.0
theme_override_icons/checked = ExtResource("4_aw1yb")
theme_override_icons/unchecked = ExtResource("5_cnla0")
action_mode = 0

[node name="Setting" type="Label" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 17.0
offset_top = 9.0
offset_right = 124.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("3_d3hd3")
theme_override_font_sizes/font_size = 16
text = "SETTINGS

"

[node name="Quit" type="Button" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 90.0
offset_top = 67.0
offset_right = 114.0
offset_bottom = 91.0
icon = ExtResource("6_f0m44")
flat = true

[node name="Resume" type="Button" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 67.0
offset_right = 55.0
offset_bottom = 91.0
icon = ExtResource("7_k5hx8")
flat = true

[node name="Retry" type="Button" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 61.0
offset_top = 67.0
offset_right = 85.0
offset_bottom = 91.0
icon = ExtResource("8_kf6ce")
flat = true

[connection signal="button_down" from="ColorRect/NinePatchRect/Quit" to="." method="_on_quit_pressed"]
[connection signal="button_down" from="ColorRect/NinePatchRect/Resume" to="." method="_on_resume_pressed"]
[connection signal="button_down" from="ColorRect/NinePatchRect/Retry" to="." method="_on_retry_pressed"]
